@@ -1,4 +1,5 @@
 3.10
+ * Unify STDOUT and SYSTEMLOG logback format (CASSANDRA-12004)
  * Faster write path (CASSANDRA-12269)
  * Option to leave omitted columns in INSERT JSON unset (CASSANDRA-11424)
  * Support json/yaml output in nodetool tpstats (CASSANDRA-12035)
